--- a/pipeline.tex
+++ b/pipeline.tex
@@ -2,6 +2,8 @@
 
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{multirow}
+
 %% Key definitions for text elements. USE THEM
 \def\secref#1{Sec.~\ref{#1}}
 \def\figref#1{Fig.~\ref{#1}}
@@ -11,6 +13,8 @@
 \def\appref#1{App.~\ref{#1}}
 
 \newcommand\etal{\emph{et al.}}
+
+\input{notation.tex}
 
 \title{\LARGE \bf Semantic Mapping Pipeline}
 
@@ -30,26 +34,28 @@
 	In our system, a semantic map is a triple:
 	
 	\begin{equation}
-		\mathcal{SM} = < \mathcal{R}, \mathcal{M}, \mathcal{P} >,
+		\cSM = < \cR, \cM, \cP >,
 	\end{equation}
 	
 	\noindent
-	where:
+	with:
 	
 	\begin{itemize}
-		\item $\mathcal{R}$: global reference system
-		\item $\mathcal{M}$: metric information obtained from sensors
-		\item $\mathcal{P}$: predicates compliant with basic concept hierarchy
+		\item $\cR$: global reference system
+		\item $\cM$: metric information obtained from sensors
+		\item $\cP$: predicates compliant with basic concept hierarchy
 	\end{itemize}
 	
-	More in detail, $\mathcal{M} = \{\mathbf{O}_i\}_{i=1 \dots N}$ is a collection of 3D objects, where each object $\mathbf{O}_i$ is a tuple defined by:
+	More in detail, $\cM = \{\bO_i\}_{i=1 \dots N}$ is a collection of 3D objects, where each object is defined by:
 	
-	\begin{equation}
-			 <\text{Type},\text{Pose3D},\text{Size3D},\text{Model}>.
-	\end{equation}
+	\begin{itemize}
+		\item {\bf Label}: $l_i \in \mathcal{L}$,
+		\item {\bf Pose3D}: $\bX = [ \bR | \bt] \in SE(3)$,
+		\item {\bf Size3D}: $\bB = (\bm ,\bM) \in \mathbf{R}^{3 \times 2}$,
+	\end{itemize}
 	
 	\noindent
-	Possible operations on the map are:
+	and has a 3D model attached to it, e.g. point cloud, mesh and so on. Possible operations on the map are:
 	
 	\begin{itemize}
 		\item query for object: given an object it's possible to check if it's already present in the map
@@ -61,18 +67,83 @@
 	
 	\section{Map Manager}
 	
-	The map manager has the task of incrementally updating the semantic map with new observations coming from sensors.
+	The map manager has the task of incrementally updating the semantic map with new observations coming from sensors. The update of the map can be done by registering a local frame with the global model. Once objects are transformed in global frame, data association is performed to find correspondences between local and global map (object tracking) and update the global map accordingly.
 	
-	\subsection{Update}
+	\subsection{Data association} 
 	
-	The update of the map can be done by registering a local frame with the global model. To this end, it's necessary to know the pose of the robot relative to the global reference frame. This information may be provided by SLAM systems, while, in simulation environments is known. Once objects are transformed in global frame, data association is performed to find correspondences between local and global map (object tracking) and update the global map accordingly.
+	Finds which objects in the global map $\cM^G$ correspond to the one observed in the local map $\cM^L$ (if any). This correspondence is evaluated through a similarity measure $d(O_i^G,O_j^L)$. So that, finding a correspondence $\bc_{i,j} = (\bO_i^G,\bO_j^L)$ consists in finding the object $\bO_j^L$ that satisfies:
 	
-	\begin{description}
-		\item{\bf Data association:} finds which objects in the global map correspond to the one observed in the local map. This correspondence is evaluated through a similarity measure. So that, finding a corresponding object can be casted into a nearest-neighbor search. Usually, similarity is computed through euclidean distance. In our problem, it's possible to leverage also semantic information. In case of a limited number of objects, brute-force is a reasonable technique to choose. In the simulated environment, the knowledge of the semantic class is perfect. In real world scenarios, object detectors return a probability distribution over semantic labels. In the first case, the corresponding object is the closest one with the same type. In the second case, euclidean distance could be weighted with class probabilities to represent a form of similarity measure.
+	\begin{equation}
+		\bO_j^L = \argmin_{\bO_j^L}  d(O_i^G,O_j^L)
+	\end{equation}
+	
+	Usually, similarity is computed through euclidean distance. In our problem, it's possible to leverage also semantic information. In a simulated environment, the knowledge of the semantic class is perfect. In real world scenarios, object detectors return a probability distribution over semantic labels. In the first case, the corresponding object is the closest one with the same type. In the second case, euclidean distance could be weighted with class probabilities to represent a form of similarity measure.
+	
+	\hspace{1cm}
+	
+	\noindent
+	{\bf Input: }
+	\begin{itemize}
+		\item {\bf Global Map}: $\cM^G = \{ \bO_i^G \}_{i=1 \dots N}$
+		\item {\bf Local Map}: $\cM^L = \{ \bO_j^L \}_{j=1 \dots M}$
+	\end{itemize}
+	\noindent
+	{\bf Output: }
+	\begin{itemize}
+		\item {\bf Correspondences}: $\cC = \{ \bc_{i,j}\}$		
+	\end{itemize}
+	\noindent
+	{\bf Approaches: }
+	\begin{itemize}
+		\item brute force
+		\item kd-trees
+		\item neural networks
+	\end{itemize}
 		
-		\item{\bf Data integration:} integrates incoming information from local map into global map. Input: maps, correspondences. Output: updated global map. Steps: for each object in local map check if it's already been seen, yes: merge, no: add to map. This strategy may fail in case of false positives returned by data association. Possible solution:  aging scheme.
-	\end{description}
+%	\begin{table}
+%		\begin{center}
+%			\begin{tabular}{|r|l|}
+%				\multicolumn{2}{c}{\bf Data Association} \\
+%				\hline
+%				\multirow{2}{*}{\bf Input:} & local map \\
+%				& global map\\ \hline
+%				{\bf Output:} & correspondences \\ \hline
+%				\multirow{3}{*}{\bf Approaches:} & brute-force \\
+%				& kd-trees \\
+%				& neural networks\\
+%				\hline 
+%			\end{tabular}
+%		\end{center}
+%		\caption{Data association.}
+%		\label{tab:assoc}
+%	\end{table}
 	
+	\subsection{Data integration} 
+	
+	Integrates incoming information from local map into global map. Input: maps, correspondences. Output: updated global map. Steps: for each object in local map check if it's already been seen, yes: merge, no: add to map. This strategy may fail in case of false positives returned by data association. Possible solution:  aging scheme.
+	
+	
+	\hspace{1cm}
+	
+	\noindent
+	{\bf Input: }
+	\begin{itemize}
+		\item {\bf Global Map}: $\cM_t^G = \{ \bO_i^G \}_{i=1 \dots N}$
+		\item {\bf Local Map}: $\cM_t^L = \{ \bO_j^L \}_{j=1 \dots M}$
+		\item {\bf Correspondences}: $\cC = \{ \bc_{i,j}\}$		
+	\end{itemize}
+	\noindent
+	{\bf Output: }
+	\begin{itemize}
+		\item {\bf Updated Global Map}: $\cM_{t+1}^G$
+	\end{itemize}
+	\noindent
+	{\bf Approaches: }
+	\begin{itemize}
+		\item vanilla
+		\item age-based
+	\end{itemize}
+		
 	\section{Action Manager}
 	
 	\subsection{Exploration} the exploration module has the task of navigating the robot in a way to improve its current knowledge of the environment. 
