--- a/notation.tex
+++ b/notation.tex
@@ -14,6 +14,7 @@
 \newcommand{\bl}{\mathbf{l}}
 \newcommand{\bt}{\mathbf{t}}
 \newcommand{\bM}{\mathbf{M}}
+\newcommand{\bL}{\mathbf{L}}
 \newcommand{\bA}{\mathbf{A}}
 \newcommand{\bB}{\mathbf{B}}
 \newcommand{\bE}{\mathbf{E}}
@@ -27,7 +28,11 @@
 \newcommand{\bS}{\mathbf{S}}
 \newcommand{\bU}{\mathbf{U}}
 \newcommand{\bV}{\mathbf{V}}
+\newcommand{\bT}{\mathbf{T}}
 \newcommand{\bpi}{\mathbf{\pi}}
+\newcommand{\btl}{\mathbf{tl}}
+\newcommand{\bbr}{\mathbf{br}}
+
 
 \newcommand{\iD}{\mathbf{D}}
 \newcommand{\iN}{\mathbf{N}}
@@ -48,6 +53,8 @@
 \newcommand{\cR}{\mathcal{R}}
 \newcommand{\cM}{\mathcal{M}}
 \newcommand{\cP}{\mathcal{P}}
+\newcommand{\cL}{\mathcal{L}}
+\newcommand{\cD}{\mathcal{D}}
 \newcommand{\range}[3]{#1_{#2:#3}}
 
 
