--- a/notation.tex
+++ b/notation.tex
@@ -13,6 +13,7 @@
 \newcommand{\bv}{\mathbf{v}}
 \newcommand{\bl}{\mathbf{l}}
 \newcommand{\bt}{\mathbf{t}}
+\newcommand{\bo}{\mathbf{o}}
 \newcommand{\bM}{\mathbf{M}}
 \newcommand{\bL}{\mathbf{L}}
 \newcommand{\bA}{\mathbf{A}}
@@ -22,6 +23,7 @@
 \newcommand{\bC}{\mathbf{C}}
 \newcommand{\bH}{\mathbf{H}}
 \newcommand{\bI}{\mathbf{I}}
+\newcommand{\bP}{\mathbf{P}}
 \newcommand{\bX}{\mathbf{X}}
 \newcommand{\bZ}{\mathbf{Z}}
 \newcommand{\bR}{\mathbf{R}}
