work in progress

--- a/notation.tex
+++ b/notation.tex
@@ -81,6 +81,7 @@
 \newcommand{\bff}{\mathbf{f}}
 \newcommand{\bp}{\mathbf{p}}
 \newcommand{\bDelta}{\mathbf{\Delta}}
+\newcommand{\bGamma}{\mathbf{\Gamma}}
 \newcommand{\bDeltaalpha}{\mathbf{\Delta \alpha}}
 \newcommand{\bDeltar}{\mathbf{\Delta r}}
 \newcommand{\bDeltax}{\mathbf{\Delta x}}
@@ -99,6 +100,7 @@
 \newcommand{\bnu}{\mathbf{\nu}}
 \newcommand{\bSigma}{\mathbf{\Sigma}}
 \newcommand{\bOmega}{\mathbf{\Omega}}
+\newcommand{\bLambda}{\mathbf{\Lambda}}
 
 \newcommand{\mat}[1]{#1}
 \newcommand{\mbf}[1]{\mathbf{#1}}
@@ -115,4 +117,8 @@
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\atantwo}{atantwo}
+
+\newcommand{\mR}{\mathbb{R}}
+\newcommand{\mN}{\mathbb{N}}
+\newcommand{\mC}{\mathbb{C}}
 
